Fixed everything moving when the scrollbar appears and disappears

--- a/src/styles.css
+++ b/src/styles.css
@@ -79,6 +79,19 @@ body::before {
     animation: contrastPulse 5s infinite ease-in-out;
 }
 
+/* ------- Prevents the everything moving bcs of the scrollbar ------- */
+html {
+    scrollbar-gutter: stable both-sides;
+}
+
+.screen-stable {
+    position: relative;
+    left: calc((100vw - 100%) / 2);
+    overflow-x: hidden;
+}
+/* -------------------------------------------------------------------- */
+
+
 @keyframes contrastPulse {
 
     0%,
